# LotusECU-T4e

./: .gitignore  LICENSE.md  README.md  T4_defs_plust4e.xml  bdm-pi.py  bin2crp-gui.py  bin2crp.py  crc.py  defaults.cfg  flasher.py  gui.py  ppc32.py  prefs.cfg  pyproject.toml  requirements.txt  sign.py  srec2crp.py  startweb.sh  t4-white.py  t4e-black.py  t4e.py  t4e.py3  t4e_downloader.py3  t4e_gui.py  t4e_gui.py3  t4e_map.txt  t4e_testinjection.py3
Documentation/: dbug.rar
accusump/: Makefile  README.md  T4_defs_plust4e.patch  accusump.S  build.py
documentation/Hardware/: t4e_map.txt
documentation/MPC5xx/: WriteExample.txt
documentation/OBD/: OBD.odt
dump/: crc.py  dump.md5
dump/A120E0029F/: info.txt
flasher/: Makefile  README.md  canstrap.S  func_eeprom_init.S  func_test.S  plugin_crc.S  plugin_eeprom.S  plugin_flash.S
injection/: Makefile  deadloop.S  flasher.S
lib/: calibration.py  coding.py  crc.py  crp01.py  crp01_uploader.py  crp05.py  crp05_uploader.py  crp08.py  crp08_uploader.py  fileprogress.py  flasher.py  gui_calibration.py  gui_coding.py  gui_common.py  gui_crp01.py  gui_crp05.py  gui_crp08.py  gui_fileprogress.py  gui_flasher.py  gui_ltacc.py  gui_tkmaptable.py  gui_tuner.py  jpcan.py  ltacc.py  ppc32.py
patch/: build.py
romraider-defs/: A129E0002-Ghidra-Disassembly.gar  README.md  T4E090_defs.inc  T4E090_defs.xml  T4E90_defs.xml  T4_defs_plust4e.xml  T4e_defs.xml  make_T4e_defs.py  make_defs.py  symbols.csv  symbols_T4e.csv  units.csv  xaxis.csv
stage15/: README.md  bin2crp.py  build.py  t4e-black.py
test/: crp08_test.py
(+160 files in other folders)
